--- a/src/components/TeamScore/teamscore.scss
+++ b/src/components/TeamScore/teamscore.scss
@@ -2,9 +2,9 @@
 
 .teamscore { 
   @include flex-center-column;
-  margin-right: 3%;
+  // margin-right: 3%;
+  margin-bottom: 4%;
   width: 200px;
-  height: 175px;
   &__heading {
     font-size: 20px;
   }
@@ -39,25 +39,29 @@
     text-align: center;
   }
   &__score-input {
-    @extend .teamscore__name-input;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 700;
-    font-size: 18px;
-    margin: 0 3%;
-    width: 100px;
-    height: 30px;
+    font-size: 30px;
+    width: 120px;
+    height: 35px;
+    padding-left: 5px;
+    text-align: center;
+    outline: $yellow;
+    border-radius: 5px;
+    border: none;
   }
   &__score-input-wrap {
     @include flex-center;
+    justify-content: space-between;
+    width: 200px;
   }
   &__score-button {
     @include flex-center;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    // font-size: 20px;
-    min-width: 25px;
-    min-height: 25px;
+    min-width: 30px;
+    min-height: 35px;
     background-color: $yellow;
-    border-radius: 50%;
+    border-radius: 5px;
   }
   &__score-button-text {
     font-size: 18px;
